feat: swagger delete
